--- a/assets/ArchitecturalDecisionRecords/003.adr-independent-fuzzing-component.md
+++ b/assets/ArchitecturalDecisionRecords/003.adr-independent-fuzzing-component.md
@@ -1,15 +1,24 @@
-# Architectural Decision Record - Standalone Fuzzing Component
+# Architectural Decision Record - Standalone Fuzzing Component <!-- omit in toc -->
+- [ADR Status](#adr-status)
+- [Context and Problem Statement](#context-and-problem-statement)
+  - [Options Considered](#options-considered)
+- [Decision Outcome](#decision-outcome)
+- [Consequences](#consequences)
+  - [Option A](#option-a)
+  - [Option B](#option-b)
+  - [Option C](#option-c)
 
+## ADR Status
 - [ ] ADR under construction 🚧
 - [ ] In Review ⏳
 - [x] Accepted ✅
 - [ ] Rejected ❌
 
-# Context and Problem Statement
+## Context and Problem Statement
 
 "We want to run the fuzzer async and also concurrently from the patch-generation and the patch-evaluation system components, because each fuzzer run for each potentially vulnerable program can be a long running job"
 
-## Options Considered
+### Options Considered
 - A: Extract python code as is from autopatch-llm 
 - B: implement fuzzing service in golang
 - C: implement fuzzing service in C
