--- a/assets/TechnicalSpikes/000.template-technical-spike.md
+++ b/assets/TechnicalSpikes/000.template-technical-spike.md
@@ -1,4 +1,10 @@
-# Template: Technical Spike
+# Template: Technical Spike <!-- omit in toc -->
+- [Spike: \[Spike Name\]](#spike-spike-name)
+- [Goal](#goal)
+- [Method](#method)
+- [Evidence](#evidence)
+- [Conclusions](#conclusions)
+- [Next Steps](#next-steps)
 
 ## Spike: [Spike Name]
 Conducted by: {Names and at least one email address for follow-up questions}
