--- a/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
+++ b/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
@@ -46,9 +46,9 @@ Chosen option: **CloudEvents**, because it provides a lightweight, standardized 
 CloudEvents is a specification for describing event data in a common format to provide interoperability across services, platforms, and systems. It focuses on the structure of event data, allowing for consistent processing regardless of the underlying transport protocol. The CloudEvents project offers a Python SDK licensed under Apache 2.0, which facilitates integration into Python applications
 
 **Pros:**
-- **Standardization:**Provides a consistent structure for event data, enhancing interoperability
-- **Lightweight:**Focuses solely on the event data structure without imposing constraints on transport protocols
-- **Python SDK:**Availability of an officially supported Python SDK under Apache 2.0 license simplifies development
+- **Standardization:** Provides a consistent structure for event data, enhancing interoperability
+- **Lightweight:** Focuses solely on the event data structure without imposing constraints on transport protocols
+- **Python SDK:** Availability of an officially supported Python SDK under Apache 2.0 license simplifies development
 
 **Cons:**
 - **Limited Protocol Specifications:** Does not define how events should be transmitted over specific protocols like MQTT, requiring additional implementation details
@@ -61,12 +61,12 @@ AsyncAPI is a specification for defining asynchronous APIs, particularly suited 
 
 **Pros:**
 - **Comprehensive Documentation:** Defines not only the message structure but also the communication channels and server configurations
-- **Protocol Agnostic:**Supports multiple protocols, including MQTT, making it versatile for different architectures
-- **Tooling Ecosystem:**Offers tools for documentation generation, code generation, and validation
+- **Protocol Agnostic:** Supports multiple protocols, including MQTT, making it versatile for different architectures
+- **Tooling Ecosystem:** Offers tools for documentation generation, code generation, and validation
 
 **Cons:**
-- **Complexity:**The extensive scope of AsyncAPI may introduce unnecessary complexity for projects that require only event data standardization
-- **Learning Curve:**evelopers need to grasp the full specification to utilize its benefits effectively
+- **Complexity:** The extensive scope of AsyncAPI may introduce unnecessary complexity for projects that require only event data standardization
+- **Learning Curve:** Developers need to grasp the full specification to utilize its benefits effectively
 
 ### Custom Event Specification
 Developing a custom event specification involves creating a tailored format and structure for event data specific to our application's needs
