--- a/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
+++ b/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
@@ -1,4 +1,17 @@
 # Selecting an Event Specification Standard for Python Microservices Communication over MQTT <!-- omit in toc -->
+- [ADR Status](#adr-status)
+- [Context and Problem Statement](#context-and-problem-statement)
+- [Considered Options](#considered-options)
+- [Decision Outcome](#decision-outcome)
+  - [Consequences](#consequences)
+- [Code Samples](#code-samples)
+  - [Example CloudEvent](#example-cloudevent)
+  - [Example Python for creating a CloudEvent](#example-python-for-creating-a-cloudevent)
+- [Comparison of Options](#comparison-of-options)
+  - [CloudEvents](#cloudevents)
+  - [AsyncAPI](#asyncapi)
+  - [Custom Event Specification](#custom-event-specification)
+- [Conclusion](#conclusion)
 
 ## ADR Status
 - [ ] ADR under construction 🚧
