--- a/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
+++ b/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
@@ -12,8 +12,8 @@
 - [Conclusion](#conclusion)
 
 ## ADR Status
-- [x] ADR under construction 🚧
-- [ ] In Review ⏳
+- [ ] ADR under construction 🚧
+- [x] In Review ⏳
 - [ ] Accepted ✅
 - [ ] Rejected ❌
 
