docs(mqtt): add technical spike for machine-to-machine communication with mqtt

--- a/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
+++ b/docs/ArchitecturalDecisionRecords/004.adr-cloudevents.md
@@ -4,7 +4,9 @@
 - [Considered Options](#considered-options)
 - [Decision Outcome](#decision-outcome)
   - [Consequences](#consequences)
-- [Example CloudEvent](#example-cloudevent)
+- [Code Samples](#code-samples)
+  - [Example CloudEvent](#example-cloudevent)
+  - [Example Python for creating a CloudEvent](#example-python-for-creating-a-cloudevent)
 - [Comparison of Options](#comparison-of-options)
   - [CloudEvents](#cloudevents)
   - [AsyncAPI](#asyncapi)
@@ -41,7 +43,9 @@ Chosen option: **CloudEvents**, because it provides a lightweight, standardized 
   - **Learning Curve:** Developers will need to familiarize themselves with the CloudEvents specification and its Python SDK
   - **Customization Limitations:** While CloudEvents is flexible, it may not cover every specific use case without extensions
 
-## Example CloudEvent
+## Code Samples
+
+### Example CloudEvent
 
 ```json
 {
@@ -58,6 +62,34 @@ Chosen option: **CloudEvents**, because it provides a lightweight, standardized 
         "is_input_from_file" : false
     }
 }
+```
+
+### Example Python for creating a CloudEvent
+
+```python
+from cloudevents.conversion import to_binary
+from cloudevents.conversion import to_structured
+from cloudevents.http import CloudEvent
+
+# Create a CloudEvent
+# - The CloudEvent "id" is generated if omitted. "specversion" defaults to "1.0".
+attributes = {
+    "type": "autopatch.crashdeetail",
+    "source": "autopatch.fuzzing-service",
+}
+
+data = {"message": "Hello World!"}
+event = CloudEvent(attributes, data)
+print("Event:", event)
+
+# Creates the HTTP request representation of the CloudEvent in structured content mode
+headers, body = to_structured(event)
+print(f"Headers: {headers}")
+print(f"Body: {body}")
+
+
+# POST
+# requests.post("<some-url>", data=body, headers=headers)
 ```
 
 ## Comparison of Options
