--- a/docs/TechnicalSpikes/001.mqtt-techincal-spike.md
+++ b/docs/TechnicalSpikes/001.mqtt-techincal-spike.md
@@ -22,10 +22,7 @@ This technical spike will build prototype to test MQTT in an isolated environmen
 ## Evidence
 
 > [!IMPORTANT]  
-> Crucial information necessary for users to succeed.
-> 
-> NOTE: Network as Code
-> Processes communicating with each other between containers using the network will need to have one defined and configured for each container.
+> Network as Code: Processes communicating with each other between containers using the network will need to have one defined and configured for each container.
 
 For example in the devcontainer 
 devcontainer json
