--- a/docs/ArchitecturalDecisionRecords/005.machine-comminucation-with-mqtt.md
+++ b/docs/ArchitecturalDecisionRecords/005.machine-comminucation-with-mqtt.md
@@ -8,8 +8,8 @@
 
 ## ADR Status
 - [ ] ADR under construction 🚧
-- [x] In Review ⏳
-- [ ] Accepted ✅
+- [ ] In Review ⏳
+- [x] Accepted ✅
 - [ ] Rejected ❌
 
 ## Context and Problem Statement
