creates the oss-fuzz spike and renames spike 002 to fuzz-bench (better fits the content of the spike which is only outlining fuzzbench)

--- a/docs/TechnicalSpikes/002.fuzz-bench-techincal-spike.md
+++ b/docs/TechnicalSpikes/002.fuzz-bench-techincal-spike.md
@@ -6,7 +6,7 @@
 - [Conclusions](#conclusions)
 - [Next Steps](#next-steps)
 
-## Spike: OSS-Fuzz Technical Spike
+## Spike: FuzzBench Technical Spike
 Conducted by: Xiaoguang Wang (xgwang9@uic.edu).
 Backlog Work Item: [Github Issue #42](https://github.com/sysec-uic/AutoPatch-LLM/issues/42).
 
