update to tech spike

--- a/docs/TechnicalSpikes/003.oss-fuzz-technical-spike.md
+++ b/docs/TechnicalSpikes/003.oss-fuzz-technical-spike.md
@@ -3,6 +3,9 @@
 - [Goal](#goal)
 - [Method](#method)
 - [Evidence](#evidence)
+  - [OSS-Fuzz Documentation Notes](#oss-fuzz-documentation-notes)
+  - [Use of the OSS-Fuzz dashboard](#use-of-the-oss-fuzz-dashboard)
+  - [My tests](#my-tests)
 - [Conclusions](#conclusions)
 - [Next Steps](#next-steps)
 
@@ -18,11 +21,51 @@ Previously, we explored using FuzzBench to source real-world CVEs for evaluation
 - Read OSS-Fuzz documentation.
 - Crawl the platform for CVEs of interest: outline the method used to reproduce, its accessibility, etc.
 
+
+
 ## Evidence
 
+### OSS-Fuzz Documentation Notes
+
+A guide to reproducing the bugs is linked here: [OSS-Fuzz Reproducing Bugs](https://google.github.io/oss-fuzz/advanced-topics/reproducing/). 
+
+
+There are several ways to reproduce bugs. 
+
+1. **With the fuzz binary target**: build the project from source and compile into a fuzzing binary. Then, using the testcase input directly on this binary.
+   - **advantages**: the necessary data/memory usage is much smaller than the following methods.
+   - **disadvantages**: significant thought and effort must be exerted on creating each build.
+2. **Use the docker file provided by OSS-Fuzz**: clone the oss-fuzz repository, build the image of the target project, build the fuzzer, and reproduce the bug by running the fuzzer image with the testcase input.
+   -  **advantages**: eliminates having to compile the fuzzing binary from source, all the tools are availible from the clone of the OSS-Fuzz repository.
+   -  **disadvantages**: the source code/specific commit still needs to be accessed for the patching step, after which the fuzzing target will need to be created from the patch code source, introducing the complexity from option 1. 
+3. **Reproduce directly from source**: use the buggy commit (downloaded locally) to build the fuzzer image using oss-fuzz commands. Run the fuzzer image with the testcase input.
+   - **advantages**: this method allows us to retain consistency in our method throughout the process; we find the buggy commit and use it to build the image, reproduce the test case, inspect and query for a patch using the commit code, and using our patched checkout, verify the patch using the same command as the reproduce step.
+   - **disadvantages**: 
+
+### Use of the OSS-Fuzz dashboard
+It is possible to filter the bug reports by type (bug/vulnerability), status (open, closed), severity, etc. That being said, there is a large time requirement for finding suitable bugs: wherein the testcase is public, the primary language used in the build is C, etc.
+
+### My tests
+
+I tested out option 3 using the project [libxml2](https://github.com/google/oss-fuzz/tree/master/projects/libxml2), which has recently logged bugs such as [abort](https://issues.oss-fuzz.com/issues/393523561) on the OSS-Fuzz dashboard. 
+
+**Results**
+
+For this test, I used the [abort](https://issues.oss-fuzz.com/issues/393523561) bug, which links this [commit range](https://oss-fuzz.com/revisions?job=libfuzzer_asan_libxml2&range=202501310613:202502010611). I checked out [this commit](https://gitlab.gnome.org/GNOME/libxml2/-/blob/82fb5caee54ac1f79cbafd5ff506a01b012a6019/meson.build) within the range in my local directory.
+I built the fuzzer image referencing the local files:
+![Building the fuzzer image using local buggy commit](/docs/images/build_libxml_fuzzer_with_local_chcekout.png)
+Then, I reproduced the bug by referencing the downloadable test case from [abort](https://issues.oss-fuzz.com/issues/393523561). The bug was properly reproduced:
+![bug reproduced](/docs/images/results_of_libxml2_reproduction_on_buggy_checkout1_xml_abort.png)
+To verify this procedure, I checked out a different [commit](https://gitlab.gnome.org/GNOME/libxml2/-/commit/82fb5caee54ac1f79cbafd5ff506a01b012a6019) out of the range specified on the bug summary to check that the same testcase would not result in a crash:
+![Failed reproduction](/docs/images/result_of_libxml2_no_reproduce_wrong_commit.png)
+The whole process, including checking out the linked commit, building the image, and running the testcase took around 20 minutes. 
 
 ## Conclusions
+The third option for reproducing bugs seems like the most preferable method: we gain access to the source code, and are quickly able to switch between the original commit and the patched version by updating the checkout.
 
+The most limiting constraint of using OSS-Fuzz is the time it takes to find suitable bugs. However, this is not a big limitation, and the success/simplicity of this bug reproduction 
+
+Neither of these are blocking limitations, and the success of reproducing the testcase indicates that OSS-Fuzz will be a useful tool for finding benchmarks.
 
 ## Next Steps
-
+Continue to collect many, many bugs!!!!
