--- a/docs/TechnicalSpikes/003.oss-fuzz-technical-spike.md
+++ b/docs/TechnicalSpikes/003.oss-fuzz-technical-spike.md
@@ -1,5 +1,4 @@
-# Template: Technical Spike <!-- omit in toc -->
-- [Spike: OSS-Fuzz](#spike-oss-fuzz)
+# Technical Spike: OSS-Fuzz <!-- omit in toc -->
 - [Goal](#goal)
 - [Method](#method)
 - [Evidence](#evidence)
@@ -9,7 +8,6 @@
 - [Conclusions](#conclusions)
 - [Next Steps](#next-steps)
 
-## Spike: OSS-Fuzz
 Conducted by: Lily Leith lleit@uic.edu
 Backlog Work Item: [sysec-uic/AutoPatch-LLM#56](https://github.com/sysec-uic/AutoPatch-LLM/issues/56)
 Sprint: 
