--- a/docs/TechnicalSpikes/004.afl2.52b-to-afl++-technical-spike.md
+++ b/docs/TechnicalSpikes/004.afl2.52b-to-afl++-technical-spike.md
@@ -55,8 +55,8 @@ As shown above, the afl package available on ubuntu just installs afl++ version 
 
 ### 2) Sample Program
 
-We are using the quickstart example from AFL Training repository (mykter/afl-training).
-We are naming this vulnerable code as vuln.c: 
+We use the quickstart example from AFL Training repository (mykter/afl-training),
+nameing this vulnerable code as vuln.c: 
 
 ```sh
 #include <string.h>
