--- a/docs/TechnicalSpikes/005.meta-infer.md
+++ b/docs/TechnicalSpikes/005.meta-infer.md
@@ -138,7 +138,7 @@ You are an expert C programmer and code analysis assistant. I will provide you w
 void set_name(char *input) {
     char name[32];
     // ... some code ...
-    for (int i = 0; i < 32; ++i) {  // line 45
+    for (int i = 0; i <= 32; ++i) {  // line 45
         name[i] = input[i];         // line 50: potential buffer overflow
     }
     // ... 
