--- a/docs/TechnicalSpikes/004.afl2.52b-to-afl++-technical-spike.md
+++ b/docs/TechnicalSpikes/004.afl2.52b-to-afl++-technical-spike.md
@@ -1,4 +1,4 @@
-# Template: Technical Spike <!-- omit in toc -->
+# Technical Spike: Transitioning from Afl2.52b to Afl++ <!-- omit in toc -->
 - [Spike: Upgrading to AFL++](#spike-afl++-technical-spike)
 - [Goal](#goal)
 - [Method](#method)
