udpates to evidence

--- a/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
+++ b/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
@@ -1,5 +1,6 @@
-# Template: Technical Spike <!-- omit in toc -->
-- [Spike: \[Spike Name\]](#spike-spike-name)
+# Technical Spike: OSS-Fuzz Integration <!-- omit in toc -->
+
+- [Spike: OSS-Fuzz Integration](#spike-spike-name)
 - [Goal](#goal)
 - [Method](#method)
 - [Evidence](#evidence)
@@ -7,17 +8,20 @@
 - [Next Steps](#next-steps)
 
 ## Spike: OSS-Fuzz Integration
-Conducted by: Lily Leith, lleit@uic.edu
+
+Conducted by: Lily Leith, <lleit@uic.edu>
 Backlog Work Item: #128
 Sprint: 4/28/25
 
 ## Goal
+
 After conducting this spike, we should know the following about the oss-fuzz procedure:
 
 - The encoding used for the crash inputs.
 - Any logging of the crash signal.
 - The context provided by standard error and the stack trace.
 - How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
+- Whether all projects on oss-fuzz have a public seed corpus directory.
 
 That information will help answer the following questions:
 
@@ -26,17 +30,25 @@ That information will help answer the following questions:
 3. What is the best method for invoking buggy programs from oss-fuzz within the existing fuzzing service?
 
 ## Method
+
 Explore oss-fuzz tools by building fuzzers of buggy libraries/codebases, run the fuzzers, examine the inputs, and log the results.
 
 ## Evidence
-Document the evidence collected that informed the conclusions below. Examples may include:
 
-Recorded or live demos of a prototype providing the desired capabilities
-Metrics collected while testing the prototype
-Documentation that indicates the solution can provided the desired capabilities
+- The encoding used for the crash inputs.
+
+My findings indicate that the crash inputs are encoded differently from project to project, and are most likely encoded in the encoding that the source code will expect. For example, openbabel crash inputs are in ascii, whereas libxml2 inputs are encoded with Windows-1254.
+
+- Any logging of the crash signal.
+libFuzzer outputs don't give any indiation of the crash signal beyond the information given in the stack trace. This might be different when using afl as the engine, but most bug reports cite libFuzzer.
+- The context provided by standard error and the stack trace.
+- How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
+- Whether all projects on oss-fuzz have a public seed corpus directory.
 
 ## Conclusions
+
 What was the answer to the question(s) outlined at the start of the spike? Capture what was learned that will inform future work.
 
 ## Next Steps
+
 What work is expected as an outcome of the learning within this spike. Was there work that was blocked or dependent on the learning within this spike?
