update to evidence

--- a/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
+++ b/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
@@ -22,6 +22,7 @@ After conducting this spike, we should know the following about the oss-fuzz pro
 - The context provided by standard error and the stack trace.
 - How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
 - Whether all projects on oss-fuzz have a public seed corpus directory.
+- Other topic to investigate more: what the patches look like, how easily are the fixes to interpret within a smaller contextual scope.
 
 That information will help answer the following questions:
 
@@ -40,10 +41,13 @@ Explore oss-fuzz tools by building fuzzers of buggy libraries/codebases, run the
 My findings indicate that the crash inputs are encoded differently from project to project, and are most likely encoded in the encoding that the source code will expect. For example, openbabel crash inputs are in ascii, whereas libxml2 inputs are encoded with Windows-1254.
 
 - Any logging of the crash signal.
-libFuzzer outputs don't give any indiation of the crash signal beyond the information given in the stack trace. This might be different when using afl as the engine, but most bug reports cite libFuzzer.
+libFuzzer outputs don't give any indiation of the numerical exit signal/code beyond what can be inferred by the information given in the stack trace. This might be different when using afl as the engine, but most bug reports cite libFuzzer.
 - The context provided by standard error and the stack trace.
+The stack trace is very helpful for tracing execution that lead to the crash. However, following file to file execution has to be done manually.
 - How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
 - Whether all projects on oss-fuzz have a public seed corpus directory.
+No, they do not. But if you don't specify an input seed directory, the fuzzer will start a new corpus. 
+- Other topic to investigate more: what the patches look like, how easily are the fixes to interpret within a smaller contextual scope.
 
 ## Conclusions
 
