--- a/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
+++ b/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
@@ -43,8 +43,9 @@ My findings indicate that the crash inputs are encoded differently from project 
 - Any logging of the crash signal.
 libFuzzer outputs don't give any indiation of the numerical exit signal/code beyond what can be inferred by the information given in the stack trace. This might be different when using afl as the engine, but most bug reports cite libFuzzer.
 - The context provided by standard error and the stack trace.
-The stack trace is very helpful for tracing execution that lead to the crash. However, following file to file execution has to be done manually.
+As of right now, the CPG scan result is describing an isolated line at which a vulnerability is sourced. The crashes in oss-fuzz projects involve many files interacting, so that the crash could occur in one file, while the patch updates code in other files. If the files were linked and represented in the same CPG, then the information in the stack trace would be redundant. Right now, the stack trace is very helpful for tracing execution that lead to the crash. However, following file to file execution has to be done manually, and doesn't help contextualize the issue very much.
 - How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
+The project Dockerfile clones the repository
 - Whether all projects on oss-fuzz have a public seed corpus directory.
 No, they do not. But if you don't specify an input seed directory, the fuzzer will start a new corpus. 
 - Other topic to investigate more: what the patches look like, how easily are the fixes to interpret within a smaller contextual scope.
