--- a/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
+++ b/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
@@ -41,13 +41,22 @@ Explore oss-fuzz tools by building fuzzers of buggy libraries/codebases, run the
 My findings indicate that the crash inputs are encoded differently from project to project, and are most likely encoded in the encoding that the source code will expect. For example, openbabel crash inputs are in ascii, whereas libxml2 inputs are encoded with Windows-1254.
 
 - Any logging of the crash signal.
+
 libFuzzer outputs don't give any indiation of the numerical exit signal/code beyond what can be inferred by the information given in the stack trace. This might be different when using afl as the engine, but most bug reports cite libFuzzer.
+
 - The context provided by standard error and the stack trace.
+
 As of right now, the CPG scan result is describing an isolated line at which a vulnerability is sourced. The crashes in oss-fuzz projects involve many files interacting, so that the crash could occur in one file, while the patch updates code in other files. If the files were linked and represented in the same CPG, then the information in the stack trace would be redundant. Right now, the stack trace is very helpful for tracing execution that lead to the crash. However, following file to file execution has to be done manually, and doesn't help contextualize the issue very much.
+
 - How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
-The project Dockerfile clones the repository
+
+Not sure on the sourcing local part
+It's possible to build the projects without oss-fuzz but each one is different, oss-fuzz gives an opportunity for some level of automation. How would Dockerfiles fit into our current application?
+
 - Whether all projects on oss-fuzz have a public seed corpus directory.
-No, they do not. But if you don't specify an input seed directory, the fuzzer will start a new corpus. 
+
+No, they do not. But if you don't specify an input seed directory, the fuzzer will start a new corpus.
+
 - Other topic to investigate more: what the patches look like, how easily are the fixes to interpret within a smaller contextual scope.
 
 ## Conclusions
