update to spike

--- a/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
+++ b/docs/TechnicalSpikes/006.oss-fuzz-integration-technical-spike.md
@@ -50,19 +50,31 @@ As of right now, the CPG scan result is describing an isolated line at which a v
 
 - How oss-fuzz builds the fuzzers from the local checkout of the buggy library.
 
-Not sure on the sourcing local part
-It's possible to build the projects without oss-fuzz but each one is different, oss-fuzz gives an opportunity for some level of automation. How would Dockerfiles fit into our current application?
+oss-fuzz uses the local checkout as the source working directory for the build, so that all executables are compiled into the local tree.
 
 - Whether all projects on oss-fuzz have a public seed corpus directory.
 
-No, they do not. But if you don't specify an input seed directory, the fuzzer will start a new corpus.
+No, they do not. But if you don't specify an input seed directory, the fuzzer will start a new corpus, and as it fuzzes it will add inputs to the corpus that
+bring execution to new paths.
 
 - Other topic to investigate more: what the patches look like, how easily are the fixes to interpret within a smaller contextual scope.
 
 ## Conclusions
 
-What was the answer to the question(s) outlined at the start of the spike? Capture what was learned that will inform future work.
+We can summarize with the answers to the following questions:
+
+1. How would crash inputs need to be manipulated to form CrashDetail objects?
+
+    To form the crash inputs into CrashDetail objects, we would first need to discover the encoding used for the input. This can be achieved (to some level of certainty) with a python library such as chardet.
+
+2. What parts of the standard error and stack trace are redundant given the CPG component? Are there any parts included in the standard error and stack trace that could be parsed for utilization in LLM-dispatch context?
+
+    With the current code inputs, the CPG information is succinct in identifying the location of the crash by isolating vulnerable functions. However, we cannot say at this point how well CPG information can summize vulnerabilities in larger programs. For now, the stack trace is useful but cumbersome to identify execution flow and determine which files are necessary to provide context to the LLM. However, this is manual work that would ideally be replaced by CPG automation.
+
+3. What is the best method for invoking buggy programs from oss-fuzz within the existing fuzzing service?
+
+    oss-fuzz relies on Dockerfiles for the building of the programs. The most feasible option might be to manually build the projects using the Dockerfile, then manually run the fuzz targets within our existing fuzzing service.
 
 ## Next Steps
 
-What work is expected as an outcome of the learning within this spike. Was there work that was blocked or dependent on the learning within this spike?
+Integrating oss-fuzz into the automated flow of the existing application will take significant work. Some parts of the integration might remain manual, such as the building of the projects since they rely on Dockerfiles. The next steps are to investigate how well these larger projects are representated as CPGs, so we can consider the amount of additional context we might need to bring from the stack trace if the CPG is not capable of representing such large programs.
